@@ -4,7 +4,10 @@
     <div class="wagtail-userbar wagtail-userbar--{{ position|default:'bottom-right' }}" data-wagtail-userbar>
         <link rel="stylesheet" href="{% versioned_static 'wagtailadmin/css/userbar.css' %}" type="text/css" />
         <div class="wagtail-userbar-nav">
-            <div class="wagtail-icon wagtail-icon-wagtail wagtail-userbar-trigger" data-wagtail-userbar-trigger>
+            <div class="wagtail-userbar-trigger" data-wagtail-userbar-trigger>
+                {% block branding_logo %}
+                <i class="wagtail-icon wagtail-icon-wagtail"></i>
+                {% endblock %}
                 <span class="wagtail-userbar-help-text">{% trans 'Go to Wagtail admin interface' %}</span>
             </div>
             <div class='wagtail-userbar-items'>
