@@ -19,6 +19,7 @@ Changelog
  * Show more granular error messages from Pillow when uploading images (Rick van Hattem)
  * Add ordering to `Site` object, so that index page and `Site` switcher will be sorted consistently (Coen van der Kamp, Tim Leguijt)
  * Add Reddit to oEmbed provider list (Luke Hardwick)
+ * Add ability to replace the default Wagtail logo in the userbar, via `branding_logo` block (Meteor0id)
  * Remove sticky footer on small devices, so that content is not blocked and more easily editable (Saeed Tahmasebi)
  * Fix: Support IPv6 domain (Alex Gleason, Coen van der Kamp)
  * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
